# Inbound_news_bot

./: .env.example  .gitignore  CRASH_REPORT.md  DEPLOYMENT.md  DIAGNOSE.md  FIXES.md  MERGE_CHANGELOG.md  README.md  ai.py  bot.py  config.py  conftest.py  debug_feeds.py  feeds.py  health.py  news_bot.py  pyproject.toml  railway.json  requirements.txt  send_demo.py  sources.yaml  state.py  test_templates_telegram.py
.github/workflows/: news-bot.yml  telegram-notify.yml
inbound-news-web/: package-lock.json  package.json
inbound-news-web/src/app/: globals.css  layout.tsx  page.tsx
inbound-news-web/src/app/[category]/: page.tsx
inbound-news-web/src/app/post/[id]/: page.tsx
inbound-news-web/src/components/: ArticleCard.tsx  DonateSection.tsx  Footer.tsx  Header.tsx  Masthead.tsx  NewsletterForm.tsx  PostCard.tsx  ThemeToggle.tsx  Ticker.tsx
inbound-news-web/src/lib/: categories.ts  posts.ts  types.ts
newsbot/: ai.py  bot.py  config.py  feeds.py  feeds_bulk.txt  health.py  source_registry.py  state.py
scripts/: send_template_smoke_test.py  test_templates_telegram.py
supabase/migrations/: 001_ingestion_schema.sql
tests/: conftest.py  test_ai.py  test_bot.py  test_feeds.py  test_news_bot.py  test_state.py
workers/: __init__.py  arxiv.py  currents.py  db.py  dedup.py  exa.py  firecrawl.py  gdelt.py  github_trending.py  hackernews.py  huggingface.py  ingest_apis.py  jina.py  lobsters.py  newsdata.py  openalex.py  rss_bulk.py  semantic_scholar.py
