[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "newsbot"
version = "3.0.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=22.0",
    "feedparser>=6.0",
    "openai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
